--- a/public/main.html
+++ b/public/main.html
@@ -92,10 +92,10 @@
         <div id="username-display"></div>
         <div class="grid-container">
             <div class="grid-item">
-                <a href="leaderboard.html"><i class="fas fa-trophy chess-piece"></i> Leaderboard</a>
+                <a href="leaderboard.html"><i class="fas fa-medal chess-piece"></i> Leaderboard</a>
             </div>
             <div class="grid-item">
-                <a href="club.html"><i class="fas fa-chess-board chess-piece"></i> Club Schedule</a>
+                <a href="club.html"><i class="fas fa-calendar chess-piece"></i> Club Schedule</a>
             </div>
             <div class="grid-item">
                 <a href="archive.html"><i class="fas fa-book chess-piece"></i> Archives</a>
@@ -104,7 +104,7 @@
                 <a href="tournament.html"><i class="fas fa-trophy chess-piece"></i> Tournaments</a>
             </div>
             <div class="grid-item">
-                <a href="socials.html"><i class="fas fa-user-friends"></i> Socials</a>
+                <a href="socials.html"><i class="fas fa-users"></i> Socials</a>
             </div>
             <div class="grid-item">
                 <button class="btn btn-link dropdown-toggle" type="button" id="optionsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cog chess-piece"></i> Options</button>
