--- a/public/main.html
+++ b/public/main.html
@@ -43,6 +43,12 @@
         .grid-item {
             text-align: center;
         }
+        .grid-item a {
+            /*display: flex; */
+            /* align-items: center;  /* Centers the icon and text vertically */
+            gap: 10px;            /* Adds space between the icon and text */
+            text-decoration: none;
+        }
         .feedback-button-container {
             display: flex;
             justify-content: center;
