--- a/public/main.html
+++ b/public/main.html
@@ -94,9 +94,9 @@
     </div>
 
     <div class="container">
-        <div class="hub">
+        <!--<div class="hub">-->
             <h1>Welcome!</h1>
-        </div>
+       <!--</div>-->
         <div id="username-display"></div>
         <div class="grid-container">
             <div class="grid-item">
