--- a/public/archive.html
+++ b/public/archive.html
@@ -8,104 +8,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- Include Chessboard.js CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/chessboardjs/dist/chessboard-1.0.0.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
     <style>
-        body {
-            background-color: #121212;
-            color: #ecba13;
-            font-family: Arial, sans-serif;
-        }
-
-        h1, h2 {
+        h2 {
             text-align: center;
             font-size: 2rem;
             color: #ecba13;
             text-shadow: 0 0 10px #fff;
         }
-
         .flex-container {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: flex-start;
             padding: 10px;
         }
-
         .board-container {
             width: 400px;
-            margin-right: 20px;
-            background-color: #1e1e1e; /* Matching dark theme */
-            border: 2px solid #ecba13; /* Chessboard border */
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            margin-right: 20px; /* Space between board and move list */
         }
-
         .move-list-container {
-            width: 250px;
             height: 500px;
+            width: 250px;
             overflow-y: auto;
             padding: 10px;
-            background-color: #1e1e1e; /* Dark background for move list */
-            border: 2px solid #ecba13;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            border-left: 1px solid #ddd; /* Optional border for separation */
         }
-
         .move-list {
             margin: 0;
             padding: 0;
             list-style: none;
-            color: #ecba13;
         }
-
         .move-list li {
             cursor: pointer;
             padding: 5px;
         }
-
         .move-list li:hover {
-            background-color: #444444; /* Highlighting on hover */
+            background-color: #f0f0f0;
         }
-
         .move-navigation {
             padding: 5px;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 10px; /* Add space between move buttons and move list */
         }
-
-        #pgnInput {
-            width: 100%;
-            height: 100px;
-            margin-top: 10px;
-            background-color: #333333; /* Input field background */
-            color: #ecba13;
-            border: 1px solid #ecba13;
-            border-radius: 5px;
-        }
-
-        .loadGameBtn button, .move-navigation button {
-            margin-top: 10px;
-            background-color: #ecba13;
-            color: #1e1e1e;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .loadGameBtn button:hover, .move-navigation button:hover {
-            background-color: #ffaa00; /* Slightly lighter on hover */
-        }
-
         .home-button-leaderboard {
             padding: 15px 30px;
-            color: #1e1e1e;
-            background-color: #ecba13;
+            color: #FFDD00;
+            background-color: #FFDD00;
             border: none;
             border-radius: 5px;
             text-align: center;
         }
-
         #mobile-overlay {
             display: none; /* Hide by default */
             position: fixed; /* Overlay to cover entire screen */
@@ -120,43 +72,33 @@
             font-size: 1.5rem;
             z-index: 1000; /* Ensure it is on top of everything */
         }
-
         .container {
             margin-top: -20px;
         }
-
-        .card {
-            background-color: #1e1e1e; /* Dark background for collapsible cards */
-            border: 1px solid #ecba13;
-            color: #ecba13;
+        textarea {
+            width: 100%;
+            height: 100px;
+            margin-top: 10px;
         }
-
-        .card-header {
-            background-color: #2c2c2c; /* Slightly lighter for header */
-            border-bottom: 1px solid #ecba13;
+        button {
+            margin-top: 10px;
         }
-
-        .card-header button {
-            color: #ecba13;
-            text-decoration: none;
-        }
-
-        .card-body ul {
-            padding-left: 0;
-        }
-
-        .card-body ul li {
-            list-style: none;
+        .collapse {
+            cursor: pointer;
+            font-size: 1.2rem;
+            padding: 10px;
             margin: 5px 0;
+            background-color: #f8f9fa;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            transition: background-color 0.2s ease;
         }
-
-        .card-body ul li a {
-            color: #ecba13;
-            text-decoration: none;
+        .collapse:hover {
+            background-color: #e2e6ea;
         }
-
-        .card-body ul li a:hover {
-            text-decoration: underline;
+        .collapse-content {
+            display: none;
+            padding-left: 15px;
         }
     </style>
 </head>
@@ -192,138 +134,64 @@
         <!-- Game Files Section -->
         <div class="game-files">
             <h2>Game Files</h2>
-            <div id="accordion">
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Famous Games
-                            </button>
-                        </h5>
-                    </div>
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
-                            <ul>
-                                <li><a href="#" class="game-file-link" data-file="assets/pgns/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
-                                <li><a href="#" class="game-file-link" data-file="assets/pgns/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
-                                <li><a href="#" class="game-file-link" data-file="assets/pgns/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
-                                <li><a href="#" class="game-file-link" data-file="assets/pgns/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+            <div class="collapse">Famous Games</div>
+            <div class="collapse-content">
+                <ul>
+                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Opera Game</a></li>
+                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
+                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
+                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
+                </ul>
+            </div>
+            <div class="collapse">Chess Club Tourney #1</div>
+            <div class="collapse-content">
+                <div class="collapse">Round 1</div>
+                <div class="collapse-content">
+                    <ul>
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/person_vs_person_round1.pgn">Person 1 vs Person 2</a></li>
+                    </ul>
                 </div>
-                <div class="card">
-                    <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Chess Club Tourney #1
-                            </button>
-                        </h5>
-                    </div>
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                        <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a href="#" class="game-file-link" data-file="assets/pgns/tourney1_game1.pgn">John Doe(W) vs Jane Smith(B)</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="game-file-link" data-file="assets/pgns/tourney1_game2.pgn">Alice Johnson(W) vs Bob Brown(B)</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="collapse">Round 2</div>
+                <div class="collapse-content">
+                    <ul>
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/person_vs_person_round2.pgn">Person 3 vs Person 4</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Chessboard.js and Chess.js Scripts -->
-    <script src="https://unpkg.com/chessboardjs/dist/chessboard-1.0.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-    <!-- Additional JavaScript -->
-    <script>
-        function checkIfMobile() {
-            var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-            var mobileOverlay = document.getElementById('mobile-overlay');
-            if (isMobile) {
-                mobileOverlay.style.display = 'block';
+        <script>
+            // Function to check if the user is on a mobile device
+            function checkIfMobile() {
+                var overlay = document.getElementById('mobile-overlay');
+                if (/Mobi|Android/i.test(navigator.userAgent)) {
+                    overlay.style.display = 'block'; // Show overlay on mobile devices
+                }
             }
-        }
 
-        document.addEventListener('DOMContentLoaded', function() {
-            checkIfMobile();
-        });
+            // Run the check when the DOM content is fully loaded
+            document.addEventListener('DOMContentLoaded', checkIfMobile);
 
-        // Initialize Chessboard and Chess.js
-        var board = Chessboard('board', 'start');
-        var game = new Chess();
-
-        // Function to load a PGN file and display it on the board
-        function loadGame(pgn) {
-            game.load_pgn(pgn);
-            board.position(game.fen());
-            updateMoveList();
-        }
-
-        // Event listener for loading a game from textarea input
-        document.getElementById('loadGameBtn').addEventListener('click', function() {
-            var pgnInput = document.getElementById('pgnInput').value;
-            loadGame(pgnInput);
-        });
-
-        // Event listener for Previous Move button
-        document.getElementById('prevMoveBtn').addEventListener('click', function() {
-            game.undo();
-            board.position(game.fen());
-            updateMoveList();
-        });
-
-        // Event listener for Next Move button
-        document.getElementById('nextMoveBtn').addEventListener('click', function() {
-            var move = game.history({ verbose: true })[game.history().length];
-            if (move) {
-                game.move(move);
-                board.position(game.fen());
-                updateMoveList();
-            }
-        });
-
-        // Function to update the move list
-        function updateMoveList() {
-            var moveList = document.getElementById('moveList');
-            moveList.innerHTML = ''; // Clear the move list
-            var history = game.history({ verbose: true });
-            history.forEach(function(move, index) {
-                var moveElement = document.createElement('li');
-                moveElement.textContent = (index + 1) + '. ' + move.san;
-                moveElement.addEventListener('click', function() {
-                    game.undo();
-                    for (var i = 0; i <= index; i++) {
-                        game.move(history[i].san);
+            // Collapse functionality
+            document.querySelectorAll('.collapse').forEach(function(coll) {
+                coll.addEventListener('click', function() {
+                    this.classList.toggle('active');
+                    var content = this.nextElementSibling;
+                    if (content.style.display === "block") {
+                        content.style.display = "none";
+                    } else {
+                        content.style.display = "block";
                     }
-                    board.position(game.fen());
                 });
-                moveList.appendChild(moveElement);
             });
-        }
-
-        // Event listener for game file links
-        document.querySelectorAll('.game-file-link').forEach(function(link) {
-            link.addEventListener('click', function(event) {
-                event.preventDefault();
-                var filePath = link.getAttribute('data-file');
-                fetch(filePath)
-                    .then(response => response.text())
-                    .then(data => {
-                        document.getElementById('pgnInput').value = data;
-                        loadGame(data);
-                    })
-                    .catch(error => console.error('Error loading PGN file:', error));
-            });
-        });
-    </script>
-    <!-- Bootstrap and jQuery Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        </script>
+        <!-- Include jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
+        <!-- Include Chess.js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.min.js" defer></script>
+        <!-- Include Chessboard.js -->
+        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-IyG61Co7Hb21W7QsY8oKhDvlG3Uffw2XbJ+T+F6V6SZjZdR5B+N9YjZ7nR9xT9g9" crossorigin="anonymous"></script>
+        <!-- Custom JavaScript to handle game file loading and move navigation -->
+        <script src="archive.js"></script>
+    </div>
 </body>
 </html>
