--- a/public/archive.html
+++ b/public/archive.html
@@ -83,22 +83,15 @@
         button {
             margin-top: 10px;
         }
-        .collapse {
-            cursor: pointer;
-            font-size: 1.2rem;
-            padding: 10px;
-            margin: 5px 0;
-            background-color: #f8f9fa;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            transition: background-color 0.2s ease;
+        .flex-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
         }
-        .collapse:hover {
-            background-color: #e2e6ea;
-        }
-        .collapse-content {
-            display: none;
-            padding-left: 15px;
+        .move-list-container {
+            flex: 0 0 250px;
+            height: 500px;
+            overflow-y: auto;
         }
     </style>
 </head>
@@ -132,33 +125,44 @@
             </div>
         </div>
         <!-- Game Files Section -->
-        <div class="game-files">
-            <h2>Game Files</h2>
-            <div class="collapse">Famous Games</div>
-            <div class="collapse-content">
-                <ul>
-                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Opera Game</a></li>
-                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
-                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
-                    <li><a href="#" class="game-file-link" data-file="assets/pgns/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
-                </ul>
-            </div>
-            <div class="collapse">Chess Club Tourney #1</div>
-            <div class="collapse-content">
-                <div class="collapse">Round 1</div>
-                <div class="collapse-content">
-                    <ul>
-                        <li><a href="#" class="game-file-link" data-file="assets/pgns/person_vs_person_round1.pgn">Person 1 vs Person 2</a></li>
+<div class="game-files">
+    <h2>Game Files</h2>
+    <ul>
+        <!-- Famous Games Category -->
+        <li>
+            <a href="#famousGames" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Famous Games</a>
+            <ul class="collapse" id="famousGames">
+                <li><a href="#" class="game-file-link" data-file="assets/pgns/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
+                <li><a href="#" class="game-file-link" data-file="assets/pgns/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
+                <li><a href="#" class="game-file-link" data-file="assets/pgns/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
+                <li><a href="#" class="game-file-link" data-file="assets/pgns/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
+            </ul>
+        </li>
+        
+        <!-- Chess Club Tourney #1 Category -->
+        <li>
+            <a href="#tourney1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chess Club Tourney #1</a>
+            <ul class="collapse" id="tourney1">
+                <!-- Round 1 Subsection -->
+                <li>
+                    <a href="#tourney1-round1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Round 1</a>
+                    <ul class="collapse" id="tourney1-round1">
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/round1_game1.pgn">Person 1(W) vs Person 2(B)</a></li>
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/round1_game2.pgn">Person 3(W) vs Person 4(B)</a></li>
                     </ul>
-                </div>
-                <div class="collapse">Round 2</div>
-                <div class="collapse-content">
-                    <ul>
-                        <li><a href="#" class="game-file-link" data-file="assets/pgns/person_vs_person_round2.pgn">Person 3 vs Person 4</a></li>
+                </li>
+                <!-- Round 2 Subsection -->
+                <li>
+                    <a href="#tourney1-round2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Round 2</a>
+                    <ul class="collapse" id="tourney1-round2">
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/round2_game1.pgn">Person 1(W) vs Person 3(B)</a></li>
+                        <li><a href="#" class="game-file-link" data-file="assets/pgns/round2_game2.pgn">Person 2(W) vs Person 4(B)</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</div>
         <script>
             // Function to check if the user is on a mobile device
             function checkIfMobile() {
@@ -167,31 +171,136 @@
                     overlay.style.display = 'block'; // Show overlay on mobile devices
                 }
             }
-
+        
             // Run the check when the DOM content is fully loaded
             document.addEventListener('DOMContentLoaded', checkIfMobile);
-
-            // Collapse functionality
-            document.querySelectorAll('.collapse').forEach(function(coll) {
-                coll.addEventListener('click', function() {
-                    this.classList.toggle('active');
-                    var content = this.nextElementSibling;
-                    if (content.style.display === "block") {
-                        content.style.display = "none";
-                    } else {
-                        content.style.display = "block";
-                    }
-                });
-            });
         </script>
         <!-- Include jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
         <!-- Include Chess.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.min.js" defer></script>
         <!-- Include Chessboard.js -->
-        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-IyG61Co7Hb21W7QsY8oKhDvlG3Uffw2XbJ+T+F6V6SZjZdR5B+N9YjZ7nR9xT9g9" crossorigin="anonymous"></script>
-        <!-- Custom JavaScript to handle game file loading and move navigation -->
-        <script src="archive.js"></script>
+        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous" defer></script>
+        <script>
+            var game;
+var board;
+var currentMoveIndex = 0;
+
+function initializeChessboard() {
+    console.log('Initializing Chessboard.js...');
+
+    // Initialize Chessboard
+    board = Chessboard('board', {
+        draggable: true,
+        position: 'start'
+    });
+
+    // Initialize Chess game
+    game = new Chess();
+
+    // Load game button event
+    document.getElementById('loadGameBtn').addEventListener('click', function() {
+        var pgnInput = document.getElementById('pgnInput').value;
+        loadGame(pgnInput);
+    });
+
+    // Previous move button event
+    document.getElementById('prevMoveBtn').addEventListener('click', function() {
+        if (currentMoveIndex > 0) {
+            currentMoveIndex--;
+            updateBoard();
+        }
+    });
+
+    // Next move button event
+    document.getElementById('nextMoveBtn').addEventListener('click', function() {
+        if (currentMoveIndex < game.history().length) {
+            currentMoveIndex++;
+            updateBoard();
+        }
+    });
+}
+
+function loadGame(pgn) {
+    console.log('Loading PGN:', pgn);
+
+    game.reset(); // Reset the game to initial state
+    board.position('start'); // Reset board to initial state
+
+    // Load new game
+    game.load_pgn(pgn);
+
+    // Update the board with the game state
+    board.position(game.fen()); 
+
+    currentMoveIndex = 0; // Start at the beginning
+    displayGameInfo(pgn);
+    updateMoveList();
+}
+
+function displayGameInfo(pgn) {
+    var players = getPgnPlayers(pgn);
+    if (players) {
+        var gameInfoDiv = document.getElementById('gameInfo');
+        gameInfoDiv.innerHTML = `<p>${players.white} (W) vs ${players.black} (B)</p>`;
+    }
+}
+
+function getPgnPlayers(pgn) {
+    var regex = /\[White "([^"]*)"\][\s\S]*\[Black "([^"]*)"\]/;
+    var match = pgn.match(regex);
+    if (match) {
+        return {
+            white: match[1],
+            black: match[2]
+        };
+    }
+    return null;
+}
+
+function updateMoveList() {
+    var moveList = document.getElementById('moveList');
+    var moves = game.history({ verbose: true });
+    moveList.innerHTML = '';
+    moves.forEach(function(move, index) {
+        var moveItem = document.createElement('li');
+        moveItem.textContent = move.san;
+        moveItem.classList.add('move-item');
+        moveItem.addEventListener('click', function() {
+            currentMoveIndex = index;
+            updateBoard();
+        });
+        moveList.appendChild(moveItem);
+    });
+}
+
+function updateBoard() {
+    var moves = game.history({ verbose: true });
+    if (currentMoveIndex < moves.length && currentMoveIndex >= 0) {
+        board.position(moves[currentMoveIndex].fen);
+    }
+    updateMoveList();
+}
+
+function loadGameFromFile(filePath) {
+    fetch(filePath)
+        .then(response => response.text())
+        .then(pgn => loadGame(pgn))
+        .catch(error => console.error('Error loading PGN file:', error));
+}
+
+document.addEventListener('DOMContentLoaded', function() {
+    initializeChessboard();
+
+    document.querySelectorAll('.game-file-link').forEach(link => {
+        link.addEventListener('click', function(event) {
+            event.preventDefault();
+            var filePath = this.getAttribute('data-file');
+            loadGameFromFile(filePath);
+        });
+    });
+});
+        </script>
     </div>
 </body>
 </html>
