--- a/public/archive.html
+++ b/public/archive.html
@@ -128,39 +128,87 @@
          <div class="game-files">
             <h2>Game Files</h2>
             <ul>
-               <!-- Famous Games Category -->
-               <li>
-                  <a href="#famousGames" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Famous Games</a>
-                  <ul class="collapse" id="famousGames">
-                     <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
-                     <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
-                     <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
-                     <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
-                  </ul>
-               </li>
-               <!-- Chess Club September 2024 Tourney Category -->
-               <li>
-                  <a href="#tourney1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chess Club Tourney #1</a>
-                  <ul class="collapse" id="tourney1">
-                     <!-- Round 1 Subsection -->
-                     <li>
-                        <a href="#tourney1-round1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Round 1</a>
-                        <ul class="collapse" id="tourney1-round1">
-                           <li><a href="#" class="game-file-link" data-file="assets/pgns/round1_game1.pgn">Person 1(W) vs Person 2(B)</a></li>
-                           <li><a href="#" class="game-file-link" data-file="assets/pgns/round1_game2.pgn">Person 3(W) vs Person 4(B)</a></li>
-                        </ul>
-                     </li>
-                     <!-- Round 2 Subsection -->
-                     <li>
-                        <a href="#tourney1-round2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Round 2</a>
-                        <ul class="collapse" id="tourney1-round2">
-                           <li><a href="#" class="game-file-link" data-file="assets/pgns/round2_game1.pgn">Person 1(W) vs Person 3(B)</a></li>
-                           <li><a href="#" class="game-file-link" data-file="assets/pgns/round2_game2.pgn">Person 2(W) vs Person 4(B)</a></li>
-                        </ul>
-                     </li>
-                  </ul>
-               </li>
-            </ul>
+            <!-- Famous Games Category -->
+            <li>
+               <a href="#famousGames" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Famous Games</a>
+               <ul class="collapse" id="famousGames">
+                  <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Donald Byrne_vs_Bobby Fischer_1956.__.__.pgn">Donald Byrne(W) vs Bobby Fischer(B)</a></li>
+                  <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Garry Kasparov_vs_Veselin Topalov_1999.__.__.pgn">Garry Kasparov(W) vs Veselin Topalov(B)</a></li>
+                  <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Anatoly Karpov_vs_Garry Kasparov_1985.__.__.pgn">Anatoly Karpov(W) vs Garry Kasparov(B)</a></li>
+                  <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
+               </ul>
+            </li>
+            <!-- Chess Club September 2024 Tourney Category -->
+            <!-- Chess Club September 2024-2025 Category -->
+            <li>
+               <a href="#tourney2024" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chess Club 2024-2025</a>
+               <ul class="collapse" id="tourney2024">
+                  <li>
+                     <a href="#tourney2024-september" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">2024</a>
+                     <ul class="collapse" id="tourney2024-september">
+                        <li>
+                           <a href="#endOfMonthTourney2024-september" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">September</a>
+                           <ul class="collapse" id="endOfMonthTourney2024-september">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/september/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2024-october" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">October</a>
+                           <ul class="collapse" id="endOfMonthTourney2024-october">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/october/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2024-november" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">November</a>
+                           <ul class="collapse" id="endOfMonthTourney2024-november">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/november/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2024-december" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">December</a>
+                           <ul class="collapse" id="endOfMonthTourney2024-december">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/december/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                     </ul>
+                  </li>
+                  <li>
+                     <a href="#tourney2025" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">2025</a>
+                     <ul class="collapse" id="tourney2025">
+                        <li>
+                           <a href="#endOfMonthTourney2025-january" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">January</a>
+                           <ul class="collapse" id="endOfMonthTourney2025-january">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/january/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2025-february" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">February</a>
+                           <ul class="collapse" id="endOfMonthTourney2025-february">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/february/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2025-march" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">March</a>
+                           <ul class="collapse" id="endOfMonthTourney2025-march">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/march/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2025-april" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">April</a>
+                           <ul class="collapse" id="endOfMonthTourney2025-april">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/april/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                        <li>
+                           <a href="#endOfMonthTourney2025-may" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">May</a>
+                           <ul class="collapse" id="endOfMonthTourney2025-may">
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/may/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                           </ul>
+                        </li>
+                     </ul>
+                  </li>
+               </ul>
+            </li>
          </div>
          <script>
             // Function to check if the user is on a mobile device
