--- a/public/archive.html
+++ b/public/archive.html
@@ -138,7 +138,6 @@
                   <li><a href="#" class="game-file-link" data-file="assets/pgns/famous/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
                </ul>
             </li>
-            <!-- Chess Club September 2024 Tourney Category -->
             <!-- Chess Club September 2024-2025 Category -->
             <li>
                <a href="#tourney2024" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chess Club 2024-2025</a>
@@ -149,25 +148,25 @@
                         <li>
                            <a href="#endOfMonthTourney2024-september" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">September</a>
                            <ul class="collapse" id="endOfMonthTourney2024-september">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/september/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/september/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
                            <a href="#endOfMonthTourney2024-october" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">October</a>
                            <ul class="collapse" id="endOfMonthTourney2024-october">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/october/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/october/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
                            <a href="#endOfMonthTourney2024-november" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">November</a>
                            <ul class="collapse" id="endOfMonthTourney2024-november">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/november/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/november/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
                            <a href="#endOfMonthTourney2024-december" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">December</a>
                            <ul class="collapse" id="endOfMonthTourney2024-december">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/december/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2024/december/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                      </ul>
@@ -178,19 +177,19 @@
                         <li>
                            <a href="#endOfMonthTourney2025-january" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">January</a>
                            <ul class="collapse" id="endOfMonthTourney2025-january">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/january/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/january/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
                            <a href="#endOfMonthTourney2025-february" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">February</a>
                            <ul class="collapse" id="endOfMonthTourney2025-february">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/february/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/february/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
                            <a href="#endOfMonthTourney2025-march" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">March</a>
                            <ul class="collapse" id="endOfMonthTourney2025-march">
-                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/march/friendlies.pgn">End Of Month Tourney: Friendlies</a></li>
+                              <li><a href="#" class="game-file-link" data-file="assets/pgns/2025/march/friendlies.pgn">End Of Month Tourney</a></li>
                            </ul>
                         </li>
                         <li>
